--- a/index.html
+++ b/index.html
@@ -3,143 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Website</title>
 </head>
-<body>
-    <center>
-        <h1>Watch cricket live</h1>
-    </center>
-    <h2>shubman gt</h2>
-    <h3>virat rcb</h3>
-    <h4>rohit mi</h4>
-    <h5>iyer pbks</h5>
-    <h6>abhishek srh</h6>
-    <p>ready to watch?Enter your mobile number and login</p>
-    <button>Watch</button>
-    <p>save your <mark>favorite</mark> team matches</p>
-    <p><marquee >Prince of Indian Cricket</marquee></p>
-    <p>kl rahul <b>dc</b></p>
-    <p>pant <u>lsg</u></p>
-    <p>sanju <i>rr</i></p>
-    <p>dhoni <del>csk</del></p>
-    <p>dhoni <s>csk</s></p>
-    <p>Glycogen Formula C <sub>6</sub> H <sub>12</sub> O <sub>6</sub></p>
-    <p>Powers 10 <sup>6</sup> 2 <sup>10</sup></p>
-    <pre>
-        if(a=b){
-            print True
-        }
-        else:
-           print Flase
-    </pre>
-    <pre>
-        step1
-            step2
-               step3
-    </pre>
-    <img src="https://i.cdn.newsbytesapp.com/images/l57920230916105140.jpeg" alt="image not found" width="450px" height="350px">
-    <table border="1" id="table">
-        <tr>
-            <th>HTML</th>
-            <th>CSS</th>
-            <th>JavaScript</th>
-        </tr>
-        <tr>
-            <td>Hyper Text Markup Language</td>
-            <td>Cascade Style Sheet</td>
-            <td>Dynamic Website</td>
-        </tr>
-        <tr>
-            <td>Skeleton structure</td>
-            <td>Design and Styling</td>
-            <td>DOM Tree</td>
-        </tr>
-        <tr>
-            <td>Web Pages</td>
-            <td>Layouts</td>
-            <td>Actions</td>
-        </tr>
-    </table>
+<body><!--window+semicolon -to get rocket emojis-->
+    <h4><marquee>🚀Welcome to TechNova Solutions - Professional IT company🚀</marquee></h4>
     <hr>
-    <p>ready to watch?Enter your mobile number and login</p><br>
-    <p>ready to watch?Enter your mobile number and login</p>
-    <h2>Multiple Lists Types</h2>
-    <ul type="Square"> <!--square,circle,disc-->
-        <h3>Unordered List(Menu) Biryani</h3>
-         <li>Chicken Biryani </li>
-         <li>Mutton Biryani </li>
-         <li>Prawn Biryani </li>
-         <li>Khemma Biryani </li>
-    </ul>   
-    <OL type="a"> <!--default numbers total 5 types lower alphabets(a),upper alphabets(A),numbers(1),lower roman(i),upper roman(I)-->
-        <h2>Ordered List(steps)</h2>
-        <li>Card Details</li>
-        <li>Amount</li>
-        <li>Password</li>
-        <li>payment</li>
-    </OL> 
-    <dl>
-        <h2>Description Lists</h2>
-        <dt>HTML:</dt><!--description term-->
-        <dd>Hyper Text Markup Language.</dd><!--description defination-->
-        <dd>Skeleton Like Structure.</dd>
-        <dt>CSS:</dt>
-        <dd>Cascading Styling Sheets.</dd>
-    </dl> 
-    <h2>Creating Links in html</h2>
-    <h2> External Page Linking</h2>
-    <a href="https://www.netflix.com/in/" target="_blank"><h4> Go to Netflix</h4></a>
-    <h2>Internal Linking.</h2>
-    <a href="#table"><h4>Go To Table Section.</h4></a>
-    <h2>Linking To Internal Page Linking</h2>
-    <a href="samsung.html"><h4>Go To Samsung</h4></a>
-
-    <h2>Linking to downloadable</h2>
-    <a href="./pdf/resume.pdf" download>
-        <h4>Download pdf.</h4>
-    </a>
-    <h2>Media Tags Audio</h2>
-    <audio controls >
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
-        type="audio/mp3">
-    </audio>
-    <h2>>Creating video's</h2>
-    <video controls>
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4"
-        type="video/mp4">
-    </video>
-    <h2>Google maps</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806. 357164192882!2d78.4747!3d17.3850!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13. 1!3m3!1m2!1s0x3bcb99daeaeb8a97%3A0x8e6b0a1a0c6b8d28!2sHyderabad%2C%20Telanganar !5e0!3m2!1sen!2sin!4v1700000000000" 
-    width="500" height="200" allowfullscreen loading="lazy"></iframe>
-
-    <h2>YouTube video</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/h21NdPXjSg0?si=WEFyxN_MHpfXK7yj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-    <h2>wikipedia</h2>
-    <iframe src="https://en.wikipedia.org/wiki/Republican_Party_(united_states)" width="500" height="200" allowfullscreen></iframe>
-
-    <h2>Forms in html</h2>
-    <form>
-    <input type="text" name="username" placeholder="Enter your Name"/><br><br>
-    <input type="email" name="email" placeholder="Enter your Email"/><br><br>
-    <input type="password" name="password" placeholder="Enter your Password"/><br><br>
-    <input type="tel" name="phone-number" placeholder="Enter your Mobile Number"/><br><br>
-    <input type="date" name="DOB" placeholder="Enter your D-O-B"/><br><br>
-    <input type="time" name="Time" placeholder="time-field"/><br><br>
-    <input type="month" name="month" placeholder="Enter Month"/><br><br>
-    <h4>Gender:</h4>
-    <input type="radio" name="gender">Male
-    <input type="radio" name="gender">Female <br><br>
-    <input type="number" name="age" placeholder="Enter your age"/><br><br>
-    <h6>Agree<input type="checkbox"/> Disagree <input type="checkbox"/></h6>
-    <input type="color"/><br><br>
-    <input type="range"/><br><br>
-    <input type="datetime" placeholder="date-time field"/><br><br>
-    <input type="search" placeholder="search-field"><br><br>
-    <input type="Submit"/>
-    <input type="Reset"/>
-    </form>
-    
-
+    <center>
+        <h3 style="background-color: burlywood; padding: 10px;">
+            <b><i>Technova Solutions</i></b></h3>
+        <h5><i>Software ● Cloud ● Digital Service</i></h5>    
+        <h4 style="background-color: brown; padding: 8px;">HTML Website Company</h4>
+    </center>
+    <hr>
+    <center>
+    <h5 style="background-color:azure;padding: 10px">
+        <a href="about">About</a>
+        <a href="services">Services</a>
+        <a href="location">Location</a>
+        <a href="office">Office</a>
+        <a href="contact">contact</a>
+    </h5>
+    </center>
+    <hr>
+    <center>
+        <h4><i><b>Our Corporate Office</b></i></h4>
+        <img src="https://www.investopedia.com/thmb/SPOl62NtucSLHi9-XyGJxm-Wo68=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/GettyImages-943067460-28883b8136b24330932cd4e2855c2508.jpg" alt="company-image" width="100%" height="400px">
+    </center>
+    <hr>
+    <center>
+        <h4 id="about" style="background-color: cadetblue;padding: 10px;color: aliceblue;">
+            <i><b>About Us</b></i>
+        <p><i>Technova Solutions is a professional IT Company
+            <mark style="background-color: cornflowerblue;">Enterprise Software Solutions</mark>
+                for business world wide,
+                We Focus on quality,performance and long - term relationships
+        </i></p></h4>
+    </center>
+    <hr>
+    <h4><b>Our services</b></h4>
+    <h5>
+        <ul>
+            <li>Enterprise Website Applications</li>
+            <li>Corporate Website</li>
+            <li>Cloud Infrastucture</li>
+        </ul>
+    </h5>   
+    <h5>
+        <ol>
+            <li>Client Discussion</li>
+            <li>Development</li>
+            <li>Testing</li>
+            <li>Deployment</li>
+        </ol>
+    </h5>
+    <hr>
+    <h3><b>Company Growth</b></h3>
+    <table border="1"
+     style="background-color: darkblue; color: white; width: 100%; text-align: center;">
+        <h4>
+            <tr>
+                <th>Year</th>
+                <th>Employees</th>
+                <th>Projects</th>
+            </tr>
+        </h4>
+        <tr>
+            <h6>
+                <td>2022</td>
+                <td>25</td>
+                <td>60+</td>
+            </h6>
+        </tr>
+        <tr>
+            <h6>
+                <td>2023</td>
+                <td>45</td>
+                <td>120+</td>
+            </h6>
+        </tr>
+    </table><br>
+    <center>
+         <button style="background-color: cornflowerblue; padding: 6px;"></button>Request Proposal</button>
+        <button style="background-color: cornflowerblue; padding: 6px;"></button>Career</button>
+    </center>
+    <hr>
+    <h4>Company Presentation</h4>
+    <video controls
+    source src="./videos/5725962-uhd_3840_2160_30fps.mp4"
+    type="video/mp4"
+    loading="lazy"
+    width="100%"
+    height="300"></video>
+    <center>
+        <h6>This video represents a 
+            <mark style="background-color:blueviolet;padding: 10px;color: whitesmoke;">
+                Company Introduction or client representation</mark></h6>
+    </center>
+    <hr>
+    <center>
+        <h1><b><i>Head Office Location</i></b></h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3805.185659498891!2d78.38624391037366!3d17.498648599521875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb910037c7b151%3A0xc58af6ebbe19966a!2sJNTU%20Metro%20station!5e0!3m2!1sen!2sin!4v1769511461780!5m2!1sen!2sin"
+         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </center>
+    <hr>
+    <center>
+        <h4><b>Contact Details</b></h4>
+        <form style="background-color: azure;color: aliceblue;padding: 5px;"><br><br>
+        <input type="text" placeholder="Enter Name" style="width: 15%; padding: 5px;"/><br><br>
+        <input type="Email" placeholder="Enter email" style="width: 15%; padding: 5px;"/><br><br>
+        <input type="Password" placeholder="Enter Password" style="width: 15%; padding: 5px;"/><br><br>
+        <button type="submit">Submit</button>
+        </form>
+    </center>
+    <hr>
+    <a href="samsung.html" target="_blank">Go To Samsung Tv's.</a>
+    <hr>
+    <center>
+        <h3><i><b>Footer Section</b></i></h3>
+        <h5><b>&copy All Rights Reserved</b></h5>
+    </center>
 </body>
 </html>
