--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </form>
     </center>
     <hr>
-    <a href="samsung.html" target="_blank">Go To Samsung Tv's.</a>
+    <a href="samsungs.html" target="_blank">Go To Samsung Tv's.</a>
     <hr>
     <center>
         <h3><i><b>Footer Section</b></i></h3>
